--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@azure/ai-text-analytics": "^5.1.0",
-    "@azure/identity": "^4.5.0",
-    "@azure/openai": "^2.0.0-beta.3",
     "backend": "file:",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
