--- a/.github/workflows/main_webappchatbot.yml
+++ b/.github/workflows/main_webappchatbot.yml
@@ -25,7 +25,7 @@ jobs:
           npm run build --if-present  # Apenas se houver um script de build no backend
 
       - name: Zip backend artifact for deployment
-        run: zip -r backend-release.zip ./backend  # Compacta a pasta do backend
+        run: zip -r backend-release.zip ./backend
 
       - name: Upload backend artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -40,7 +40,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # This is required for requesting the JWT
+      id-token: write  # Requerido para a requisição JWT
 
     steps:
       - name: Download backend artifact from build job
@@ -59,14 +59,16 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
-           
-          
-          
+      # Diagnóstico para verificar a autenticação
+      - name: Verify Azure Authentication
+        run: |
+          az account show
+          az webapp list --output table  # Para listar os web apps disponíveis e verificar se a conta está correta
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'webappchatbot'
+          app-name: 'webappchatbot'  
           slot-name: 'Production'
           package: ./backend
