--- a/.github/workflows/main_webappchatbot.yml
+++ b/.github/workflows/main_webappchatbot.yml
@@ -57,9 +57,10 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          auth-type: 'service-principal'
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          auth-type: 'service-principal'  # Usando autenticação via Service Principal
 
-    
+      # Diagnóstico para verificar a autenticação
       - name: Verify Azure Authentication
         run: |
           az account show
@@ -69,6 +70,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'webappchatbot' 
-          slot-name: 'Production' 
+          app-name: 'webappchatbot'  # Nome da sua Azure Web App
+          slot-name: 'Production'    # Slot de produção, altere se necessário
           package: ./backend
