--- a/.github/workflows/main_backend-azure.yml
+++ b/.github/workflows/main_backend-azure.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          # npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -58,5 +58,5 @@ jobs:
         with:
           app-name: 'backend-azure'
           slot-name: 'Production'
-          package: .
+          package: ./backend
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E9746442131E492FA59ABA2CF8EACBC7 }}
